<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="8dp">

    <TextView
        android:id="@+id/tvName"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:ellipsize="end"
        android:maxLines="1"
        android:text="@string/tvTitleOfExercise"
        android:textColor="@android:color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/rvExercise"
        app:layout_constraintEnd_toStartOf="@+id/btDeleteButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvExercise"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btDeleteButton"
        tools:listitem="@layout/item_sets" />

    <Button
        android:id="@+id/btDeleteButton"
        android:layout_width="48dp"
        android:layout_height="48dp"

        android:contentDescription="@string/btDeleteExerciseContentDescription"
        app:layout_constraintBottom_toTopOf="@+id/rvExercise"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btAddSet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btAddSet"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/rvExercise" />

</androidx.constraintlayout.widget.ConstraintLayout>