<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="50dp"
    android:minHeight="50dp"
    app:layout_constraintHeight_percent="0.2">


    <TextView
        android:id="@+id/tvNumberOfSets"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:text="@string/numberOfSets"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/etWeight"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:ems="10"
        android:hint="@string/edittextWeightHint"
        android:inputType="numberDecimal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/etReps"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintHorizontal_weight="4"
        app:layout_constraintStart_toEndOf="@+id/tvNumberOfSets"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/etReps"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:ems="10"
        android:hint="@string/edittextRepsHint"
        android:inputType="number"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btDeleteSet"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_weight="4"
        app:layout_constraintStart_toEndOf="@+id/etWeight"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btDeleteSet"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_weight="0.8"
        app:layout_constraintStart_toEndOf="@+id/etReps"
        app:layout_constraintTop_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>