<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragments.ExerciseInfoFragment">

    <ImageView
        android:id="@+id/ivExerciseGif"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/guideline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:src="@tools:sample/avatars" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.3" />

    <TextView
        android:id="@+id/tvBodypart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:text="@string/bodypart"
        app:layout_constraintEnd_toStartOf="@+id/tvTargetMuscle"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline" />

    <TextView
        android:id="@+id/tvEquipment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:text="@string/equipment"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/tvTargetMuscle"
        app:layout_constraintTop_toBottomOf="@+id/ivExerciseGif" />

    <TextView
        android:id="@+id/tvTargetMuscle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:text="@string/targetMuscle"
        app:layout_constraintEnd_toStartOf="@+id/tvEquipment"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/tvBodypart"
        app:layout_constraintTop_toBottomOf="@+id/ivExerciseGif" />

    <TextView
        android:id="@+id/tvBodypartEdit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="TextView"
        app:layout_constraintEnd_toEndOf="@+id/tvBodypart"
        app:layout_constraintStart_toStartOf="@+id/tvBodypart"
        app:layout_constraintTop_toBottomOf="@+id/tvBodypart" />

    <TextView
        android:id="@+id/tvTargetMuscleEdit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="TextView"
        app:layout_constraintEnd_toEndOf="@+id/tvTargetMuscle"
        app:layout_constraintStart_toStartOf="@+id/tvTargetMuscle"
        app:layout_constraintTop_toBottomOf="@+id/tvTargetMuscle" />

    <TextView
        android:id="@+id/tvEquipmentEdit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="TextView"
        app:layout_constraintEnd_toEndOf="@+id/tvEquipment"
        app:layout_constraintStart_toStartOf="@+id/tvEquipment"
        app:layout_constraintTop_toBottomOf="@+id/tvEquipment" />

</androidx.constraintlayout.widget.ConstraintLayout>