<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="4dp"
        app:strokeColor="#D703A9F4"
        app:strokeWidth="1dp"
        android:layout_margin="6dp">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="10dp"
            android:paddingTop="10dp"
            android:paddingBottom="5dp">

            <TextView
                android:id="@+id/bestSetTab"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/setLabelWorkoutHistory"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="@id/exerciseTab"
                app:layout_constraintEnd_toEndOf="@id/constraintLayout"
                app:layout_constraintStart_toStartOf="@+id/guideline3"
                app:layout_constraintTop_toTopOf="@id/exerciseTab" />

            <TextView
                android:id="@+id/workoutBody"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:text="TextView"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="@id/constraintLayout"
                app:layout_constraintTop_toBottomOf="@id/exerciseTab" />

            <TextView
                android:id="@+id/tvDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dateInWorkoutHistoryCard"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@id/constraintLayout"
                app:layout_constraintTop_toTopOf="@id/constraintLayout" />

            <TextView
                android:id="@+id/exerciseTab"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/exerciseLabelInWorkoutHistory"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="@id/constraintLayout"
                app:layout_constraintTop_toBottomOf="@id/tvDate" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.8" />

            <TextView
                android:id="@+id/bestSetsColumn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="TextView"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="@id/constraintLayout"
                app:layout_constraintStart_toStartOf="@+id/guideline3"
                app:layout_constraintTop_toBottomOf="@+id/bestSetTab" />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>
</layout>